syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Contracts";
package balance;

service BalanceService {
//    Prepare
    rpc PrepareTransaction (BalanceRequest) returns (PrepareTransactionResult);
//    Commit
    rpc CommitTransaction (BalanceRequest) returns (CommitTransactionResult);
//    Abort
    rpc AbortTransaction (BalanceRequest) returns (google.protobuf.Empty);
//    etc
    rpc ShowAll (ShowBalanceRequest) returns (ShowBalanceReply);
}


message BalanceRequest {
    string user_id = 1;
    int64 value = 2;
}

message CommitTransactionResult {
    bool is_success = 1;
    string message = 2;
}

message PrepareTransactionResult {
    bool is_success = 1;
    string message = 2;
}

message ShowBalanceRequest {
    string user_id = 1;
}

message ShowBalanceReply {
    string string = 1;
}